examples/reference/directive_typo_endmatch_fixit_error.err
Assembly failed:
4: ERROR [asm202]
    4 |         .endmatc
        ^
help: did you mean .endmatch?
suggestion: replace 4:9-17 with ".ENDMATCH"
ERROR: Unknown directive .ENDMATC
